# cmake-boilerplate

./: CMakeLists.txt  cmake-clean  readme.md  test
src/: CMakeLists.txt  foo.c  foo.h  main.c
tests/: CMakeLists.txt  dbg.h  minunit.h  testing_bar.c
